# medpass_to_anki

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.c.918AAE1E95DF5FC0.idx
src/: main.c
